@@ -4,6 +4,8 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02o: *********************************
 
+IMP: (06/10/05, GVG) Improving error message when you try to reopen a library (Bug #347)
+ 
 IMP: (06/10/05, GVG) New values for DRC Rules 30.1, 30.2 and 30.4 in MoCMOS.
 Old values: 4,4,8. New Values: 5,5,10
 
